--- a/public/exercise.html
+++ b/public/exercise.html
@@ -13,8 +13,9 @@
 <body>
   <nav>
     <a href="/">Fitness Tracker</a>
-    <a href="./stats">Dashboard</a>
+    <a href="/stats">Dashboard</a>
   </nav>
+
   <div class="wrapper">
     <header>
       <h1>Fitness Tracker</h1>
