--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,9 @@
 <body>
   <nav>
     <a href="/">Fitness Tracker</a>
-    <a href="./stats">Dashboard</a>
+    <a href="/stats">Dashboard</a>
   </nav>
+
   <div class="wrapper workout">
     <header>
       <h1>Fitness Tracker</h1>
@@ -26,8 +27,8 @@
           <div>
             <div class="workout-stats"></div>
             <div class="buttons">
-              <a id="continue-btn" href="./exercise?" class="huge ui blue button">Continue Workout</a>
-              <a href="./exercise" class="huge positive ui button">New Workout</a>
+              <a id="continue-btn" href="/exercise?" class="huge ui blue button">Continue Workout</a>
+              <a href="/exercise" class="huge positive ui button">New Workout</a>
             </div>
           </div>
         </div>
